--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -1,5 +1,5 @@
-resolver: lts-18.5
-compiler: ghc-8.10.4
+resolver: lts-18.18
+compiler: ghc-8.10.7
 
 packages:
   - .
@@ -11,3 +11,5 @@ extra-deps:
   - git: https://github.com/mpdairy/purescript-bridge
     commit: a55ece4e5a5d1a3cde5302ef449e3c9f2963d9a7
   -  dom-lt-0.2.0@sha256:fc7451d6ada55233239d22b6eed8f2e4c1c1290f1cad101c9d429ea875aa72e6,1615
+  - git: https://github.com/LeventErkok/sbv.git
+    commit: c7bd569e28c8b035f9e4fba2e6504803d8a1a43a
