--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -177,7 +177,7 @@ push:latest:
   stage: push
   extends: .docker-job
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: on_success
     - when: manual
       allow_failure: true
@@ -225,7 +225,7 @@ push:tag:
   stage: push
   extends: .docker-job
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_TAG
   needs:
     - test
   variables:
