--- a/binja_plugin/pyrightconfig.json
+++ b/binja_plugin/pyrightconfig.json
@@ -14,6 +14,7 @@
         "**/.git"
     ],
     "useLibraryCodeForTypes": true,
+    "strictParameterNoneValue": false,
     "reportUnnecessaryComparison": "warning",
     "reportOptionalSubscript": "error",
     "reportOptionalMemberAccess": "error",
