Fix haddocks not linking, too large

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,14 @@
-.PHONY: build help test submodule-init submodule-update hlint
+stackage_snapshot := $(shell grep -oE '^resolver: .*$$' stack.yaml | sed -E -e 's/resolver:\s*//' -e 's/\s*$$//')
+haddock_remote := https://www.stackage.org/haddock/${stackage_snapshot}/
+
+# HADDOCK_ARGS := --no-haddock-hyperlink-source
+HADDOCK_ARGS :=
+
+# Ideally we'd include all of our projects but this creates too large an artifact (>100MB) for our gitlab pages instance
+# HADDOCK_CP_COMMAND := cp -ar $$(stack path --haddock ${HADDOCK_ARGS} --local-doc-root)/{binary-analysis-*,binaryninja-*,blaze-*,blaze-ui-server-*,doc-index*,index.html,*.css,*.js,*.png} docs/
+HADDOCK_CP_COMMAND := cp -ar $$(stack path --haddock ${HADDOCK_ARGS} --local-doc-root)/{blaze-*,blaze-ui-server-*,doc-index*,index.html,*.css,*.js,*.png} docs/
+
+.PHONY: build help test submodule-init submodule-update hlint docs
 
 build:
 	stack build --test --no-run-tests
@@ -10,12 +20,10 @@ hlint:
 	hlint src test
 
 docs: src/ package.yaml stack.yaml
-	stack haddock
+	stack haddock ${HADDOCK_ARGS}
+	rm -rf docs/
 	mkdir -p docs
-	bash -c ' \
-		shopt -s nullglob && \
-		cp -ar $$(stack path --haddock --local-doc-root)/{binary-analysis-*,binaryninja-*,blaze-*,blaze-ui-server-*,doc-index*,index.html,*.css,*.js,*.png} docs/ \
-		'
+	bash -c 'shopt -s nullglob && ${HADDOCK_CP_COMMAND}'
 	find docs/ -name '*.html' -type f -print0 | xargs -0 sed -i 's|<a href="\.\./\([^/]\+\)|<a href="'"${haddock_remote}"'\1|g'
 	find docs/ -maxdepth 1 -type d -printf '%P\n' | \
 		while read d; do \
