--- a/server/Makefile
+++ b/server/Makefile
@@ -3,15 +3,21 @@ haddock_remote := https://www.stackage.org/haddock/${stackage_snapshot}/
 
 # HADDOCK_ARGS := --no-haddock-hyperlink-source
 HADDOCK_ARGS :=
+STACK_OPTIONS ?=
 
 # Ideally we'd include all of our projects but this creates too large an artifact (>100MB) for our gitlab pages instance
 # HADDOCK_CP_COMMAND := cp -ar $$(stack path --haddock ${HADDOCK_ARGS} --local-doc-root)/{binary-analysis-*,binaryninja-*,blaze-*,blaze-ui-server-*,doc-index*,index.html,*.css,*.js,*.png} docs/
 HADDOCK_CP_COMMAND := cp -ar $$(stack path --haddock ${HADDOCK_ARGS} --local-doc-root)/{blaze-*,blaze-ui-server-*,doc-index*,index.html,*.css,*.js,*.png} docs/
 
-.PHONY: build help test submodule-init submodule-update hlint docs
+.PHONY: build optim help test submodule-init submodule-update hlint docs
 
 build:
-	stack build --test --no-run-tests
+	stack build --test --no-run-tests --fast ${STACK_OPTIONS}
+
+optim:
+	stack clean
+	$(MAKE) -C ../blaze optim
+	stack build --test --no-run-tests --ghc-options=-O2 ${STACK_OPTIONS}
 
 test: build
 	.ci/scripts/run_test.py $$(stack path --dist-dir)/build/blaze-server-test/blaze-server-test
@@ -19,7 +25,7 @@ test: build
 hlint:
 	hlint src test
 
-docs: src/ package.yaml stack.yaml
+docs:
 	stack haddock ${HADDOCK_ARGS}
 	rm -rf docs/
 	mkdir -p docs
