--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,9 +142,18 @@ build:
 
     # Build images
     - echo -e "section_start:`date +%s`:docker-build\r\e[0KBuild docker images"
+    - if [ "${CI_COMMIT_BRANCH}" = "${CI_DEFAULT_BRANCH}" ]; then
+        build_type=release;
+      else
+        build_type=dev;
+      fi
     - docker build --pull . -f Dockerfile --target main
+      --build-arg "BUILD_TYPE=${build_type}"
+      --build-arg STACK_BUILD_OPTIONS=--ghc-options=-fdiagnostics-color=always
       -t "${blaze_image}:pipeline-${CI_PIPELINE_IID}"
     - docker build --squash --pull . -f Dockerfile --target minimal
+      --build-arg "BUILD_TYPE=${build_type}"
+      --build-arg STACK_BUILD_OPTIONS=--ghc-options=-fdiagnostics-color=always
       -t "${squashed_blaze_image}:pipeline-${CI_PIPELINE_IID}"
     - docker build --pull . -f Dockerfile --target wheel-server
       --build-arg CI_PIPELINE_ID="${CI_PIPELINE_ID}"
