Fix a few typechecker warnings

--- a/binja_plugin/pyrightconfig.json
+++ b/binja_plugin/pyrightconfig.json
@@ -1,8 +1,7 @@
 {
     "stubPath": "./stubs",
     "include": [
-        "src/",
-        "stubs/"
+        "src/"
     ],
     "exclude": [
         ".venv/",
