--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -149,11 +149,11 @@ build:
       fi
     - docker build --pull . -f Dockerfile --target main
       --build-arg "BUILD_TYPE=${build_type}"
-      --build-arg STACK_BUILD_OPTIONS="--ghc-options=-fdiagnostics-color=always --ghc-options=-g2"
+      --build-arg STACK_BUILD_OPTIONS="--no-executable-stripping --ghc-options=-fdiagnostics-color=always --ghc-options=-g2"
       -t "${blaze_image}:pipeline-${CI_PIPELINE_IID}"
     - docker build --pull . -f Dockerfile --target minimal
       --build-arg "BUILD_TYPE=${build_type}"
-      --build-arg STACK_BUILD_OPTIONS="--ghc-options=-fdiagnostics-color=always --ghc-options=-g2"
+      --build-arg STACK_BUILD_OPTIONS="--no-executable-stripping --ghc-options=-fdiagnostics-color=always --ghc-options=-g2"
       -t "${minimal_blaze_image}:pipeline-${CI_PIPELINE_IID}"
     - docker build --pull . -f Dockerfile --target wheel-server
       --build-arg CI_PIPELINE_ID="${CI_PIPELINE_ID}"
