--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -177,6 +177,7 @@ test:
     GIT_STRATEGY: none
     GIT_CLEAN_FLAGS: none
   script:
+    - cp -T "${BLAZE_BINJA_LICENSE_FILE}" /root/.binaryninja/license.dat
     - cd /blaze/build/blaze-ui/server
     - ../.ci/scripts/run_test.py ~/.local/bin/blaze-server-test
 
