--- a/binja_plugin/pyproject.toml
+++ b/binja_plugin/pyproject.toml
@@ -5,10 +5,9 @@ description = "Blaze"
 authors = ["Kudu Dynamics"]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<3.10"
-websockets = "^9.1"
+python = "^3.10"
+websockets = "^10.3"
 requests = "^2.26.0"
-typing-extensions = "^3.10.0"
 
 [tool.poetry.dev-dependencies]
 
